# vice-mcp

./: README.md
.woodpecker/: build-linux.yaml  build-macos.yaml  build-windows.yaml  create-release.yaml  release.yaml
docs/plans/: 2026-02-02-http-transport-layer.md  2026-02-02-vice-mcp-server-design.md  2026-02-03-interrupt-log-hook-integration.md  2026-02-03-trace-cpu-hook-integration.md  2026-02-03-vice-mcp-debugging-tools-design.md
scripts/: build-windows-cross.sh  build-windows-msys2.sh  compute-version.sh
tools/: SCHEMA_ANALYSIS.md  __init__.py
tools/resilience/: __init__.py  vice_mcp_resilient.py
tools/tests/: __init__.py  test_mcp_protocol.py
vice/: .autoconf.out  .automake.out  INTEGRATION_TESTS.md  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac
vice/autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  (+5 more)
vice/src/mcp/: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  cJSON.README  mcp_server.c  mcp_server.h  mcp_tools.c  mcp_tools.h  mcp_tools_checkpoint.c  mcp_tools_chipstate.c  mcp_tools_debug.c  mcp_tools_disk.c  mcp_tools_display.c  mcp_tools_execution.c  mcp_tools_helpers.c  mcp_tools_input.c  mcp_tools_internal.h  mcp_tools_machine.c  mcp_tools_memory.c  mcp_tools_protocol.c  mcp_tools_snapshot.c  mcp_tools_trace.c  mcp_tools_validation.c  mcp_tools_validation.h  mcp_transport.c  mcp_transport.h
vice/src/mcp/.deps/: libmcp_a-cJSON.Po  libmcp_a-mcp_server.Po  libmcp_a-mcp_tools.Po  libmcp_a-mcp_transport.Po  mcp_transport.Po
vice/src/mcp/tests/: Makefile  README.md  test_mcp_tools  test_mcp_tools.c  vice_stubs.c
(+2272 files in other folders)
